--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,32 @@
+# Dependencies
 node_modules
+
+# Environment
 .env
+.env.*
+
+# Build
 dist
-package-lock.json
-/pnpm-lock.yaml
+build
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# IDE
+.idea
+.vscode
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Test coverage
+coverage
+.nyc_output
